# FiGS-Semantic

./: .gitmodules  README.md  environment_x86.yml  pyproject.toml
configs/capture/: iphone15pro copy.json
configs/control_parameters/: body_rate_v1.json
configs/course/: cluttered002.json  hover001.json  line001.json
configs/drone_parameters/: carl.json  iris.json
configs/flying_parameters/: alpha.json
configs/fout_waypoints/: track_cluttered.json  track_extended.json  track_hover.json  track_line.json  track_robust.json  track_sigmoid.json
configs/frame/: carl.json
configs/mpc_parameters/: backroom.json  flightroom.json
docs/: index.md
notebooks/: acados_ocp_nlp_vrmpc.json  acados_sim_nlp_flyer.json  create_gsplat.ipynb  sigmoid.ipynb  simulate_trajectory.ipynb  test.py
src/: figs.py  simulator.py
src/control/: base_controller.py  vehicle_rate_mpc.py
src/controller/: base_controller.py  open_loop.py  vehicle_rate_mpc.py
src/dynamics/: flight.py  flying.py  model_equations.py  model_specifications.py  quadcopter_model.py  quadcopter_simulate.py
src/figs/: simulator.py
src/figs/control/: base_controller.py  vehicle_rate_mpc.py
src/figs/dynamics/: flight.py  glider_ode_verification.py  model_equations.py  model_specifications.py
src/figs/planning/: waypoint_glider.py
src/figs/render/: capture_calibration.py  capture_generation.py  gsplat_semantic.py
src/figs/scene_editing/: scene_editing_utils.py
src/figs/tsampling/: build_rrt_dataset.py  rrt_datagen_v10.py
src/figs/utilities/: capture_helper.py  (+1 more)
src/render/: capture_calibration.py  capture_generation.py  gsplat.py  scene_render.py
src/utilities/: capture_helper.py  configs.py  dynamics_helper.py  flight_log.py  gsplat_helper.py  parameters_helper.py  trajectory_helper.py
src/visualize/: generate_videos.py  plot_synthesize copy.py  plot_trajectories.py
(+5 files in other folders)
