[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figs"
version = "0.1.0"
description = "Flying in Gaussian Splats"
authors = [{ name = "JunEn Low", email = "lowjunen@gmail.com.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]