[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figs"
version = "0.1.0"
description = "Flying in Gaussian Splats"
authors = [{ name = "JunEn Low", email = "lowjunen@gmail.com.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy",
    "scipy",
    "qpsolvers",
    "ipykernel",
    "ipympl",
    "torch==2.1.2",
    "torchvision==0.16.2",
]

[tool.setuptools.packages.find]
where = ["src"]