[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figs"
version = "0.1.0"
description = "Flying in Gaussian Splats"
authors = [{ name = "JunEn Low", email = "lowjunen@gmail.com.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
"numpy==1.26.4",
    "scipy",
    "qpsolvers",
    "albumentations",
    "imageio[ffmpeg]",
    "ninja",
    "gdown",
    "ipykernel",
    "ipympl",
    "matplotlib",
    "cython",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "pytorch-cuda==11.8",
    "colmap",
    "opencv-python-headless==4.10.0.84",
    "cuda-toolkit",
    "cuda-nvcc",
    "nerfstudio==1.1.4",
]

[tool.setuptools.packages.find]
where = ["src"]